@@ -18,6 +18,10 @@ Breaking Changes
 Changes
 =======
 
+- Arrays can now contain mixed types if they're safely convertible. JSON
+  libraries tend to encode values like ``[ 0.0, 1.2]`` as ``[ 0, 1.2 ]``, this
+  caused an error because of the strict type match we enforced before.
+
 Fixes
 =====
 
